part2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  labels:
    app: app1-label
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: app1
  template:
    metadata:
      labels:
        pod: app1
    spec:
      containers:
        - name: app1
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-apps
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: web-apps
          configMap:
            name: app1-html
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    pod: app1
  ports:
    - port: 8080
      targetPort: 80
